# PackageDev

./: .flake8  .gitattributes  .gitignore  .hgignore  .hgtags  .travis.yml  AAA.py  AGENTS.md  AUTHORS.txt  CONTRIBUTORS.txt  Default.sublime-keymap  JSON tmLanguage.JSON-tmLanguage  JSON tmLanguage.tmLanguage  LICENSE  LICENSE.txt  Main.sublime-menu  PackageDev.sublime-settings  README.md  README.rst  README.txt  RELEASE.txt  __init__.py  _logging.py  autocomplete_key_map_contexts.py  build_sys_dev.py  commands_file_dev.py  completions_dev.py  dependencies.json  file_conversion.py  grammar_dev.py  init.ps1  json2plist.py  main.py  manifest.in  messages.json  ordereddict_yaml.py  package_dev.py  py_compat.py  pyproject.toml  scope_data.py  (+16 more)
.github/: FUNDING.yml
Doc/: README.html
Lib/: ordereddict.py  ordereddict_yaml.py  plist_parser.py
Package/: API.sublime-completions  Comments.tmPreferences  Convert to ....sublime-build  Default.sublime-keymap  Escaped Regular Expression.sublime-syntax  Main.sublime-menu  PackageDev.sublime-commands  PackageDev.sublime-settings  Preferences.sublime-settings-hints  Regex Replacement (Escaped).sublime-syntax  Regex Replacement.sublime-syntax  Regular Expression (Escaped).JSON-tmLanguage  Regular Expression (Escaped).sublime-syntax  Regular Expression (Escaped).tmLanguage  Scope Selector (XML CDATA).sublime-syntax  Scope Selector (XML).sublime-syntax  Scope Selector.sublime-syntax  syntax_test_scope_selector.txt
Support/: AAAPackageDev.sublime-commands  Build System.tmLanguage  Comments.tmPreferences  Convert to ....sublime-build  (+31 more)
(+569 files in other folders)
