[project]
name = "package-dev"
version = "0.0.0"
description = "The Sublime Text meta package"
requires-python = ">=3.8"
dependencies = [
    "pyyaml==5.4",
]

[dependency-groups]
dev = [
  "ruff",
]


[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "preserve"
